Fix: navbar is visible

--- a/front/app/css/style.css
+++ b/front/app/css/style.css
@@ -1,9 +1,19 @@
 html, body {
     height: 100%;
+    margin: 0;
 }
-#content {
-    flex: 1 0 auto;
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
+
+#app {
+    flex: 1;
+}
+
 footer {
-    flex-shrink: 0;
+    margin-top: auto;
+    font-size: 0.8em;
 }
